Recommendations/index.scss
@import '../lib/scss/main.scss';
@import 'star-rating.scss';

.mrc-ui-recommendation-component {
  padding-bottom: $spacing-large;
}

.mrc-ui-add-recommendation-button {
  width: auto !important;
  padding: $spacing-none $spacing-extra-large !important;
  margin: $spacing-large auto $spacing-large auto !important;
}

.mrc-ui-recommendations-headline {
  margin-bottom: $spacing-extra-small;
  padding: $spacing-extra-small $spacing-medium;
  color: $color-brand-primary-default;
}

.mrc-ui-recommendation {
  padding: $spacing-medium;
  margin: $spacing-none auto !important;
}

@media #{$breakpoint-not-small} {
  .mrc-ui-recommendation {
    padding: $spacing-medium 4rem !important;
  }
}

.mrc-ui-recommendation-text {
  white-space: pre-line;
  line-height: $line-height-copy;
  color: $color-palette-grey-tint-20;
  -ms-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
}

.mrc-ui-recommendation-divider {
  border-color: $color-palette-grey-tint-80;
}

.mrc-ui-recommendations-list {
  background: $color-contrast-white;
}

@media #{$breakpoint-not-small} {
  .mrc-ui-recommendations-list {
    border: $border-width-thin solid $color-palette-grey-tint-80;
    border-radius: $border-radius-small;
    -webkit-box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.12);
    -moz-box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.12);
    box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.12);
    padding: 2rem 0rem !important;
  }
}

@media #{$breakpoint-medium} {
  .mrc-ui-recommendations {
    max-width: 44rem;
    margin: $spacing-none auto $spacing-none auto !important;
  }
}

@media #{$breakpoint-large} {
  .mrc-ui-recommendations {
    max-width: 48rem;
    margin: $spacing-none auto $spacing-none auto !important;
  }
}

